# Invoice-pdf

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Invoice.csv  Makefile  README.md  REFactor_roadmap.md  TROUBLESHOOTING_PIPELINE.md  config_adv.py  implementation_plan.md  main.py  main_2step_enhanced copy.py  main_2step_enhanced.py  main_2step_enhanced_adv.py  nohup.out  optimization_strategy.md  performance_monitor.py  performance_report_20250806_105724.json  phase5_preparation_recommendations.md  populate_manifest.py  prompts.py  prompts_2step_enhanced_v2.py  pyproject.toml  quick_optimizations.py  requirements.txt  resumable_manifest_plan.md  sqlite_resume_tui_implementation_plan.md
.github/workflows/: ci.yml
invoice_pdf/: config.py  logging_config.py
invoice_pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
invoice_pdf/_legacy/: main_2step_enhanced.py  prompts_2step_enhanced_v2.py
invoice_pdf/core/: exceptions.py  models.py  pdf_utils.py  rate_limit.py  security.py
invoice_pdf/io/: csv_stream.py
reports/: outputs.py
tests/: test_failure_scenarios.py  test_gemini_integration.py  test_manifest.py  test_model_integration.py  test_models.py  test_pdf_utils.py  test_rate_limit.py  test_regression_fixture.py
tests/fixtures/: mock_responses.json
utilities/: __init__.py  json_utils.py  manifest.py  pdf_utils.py  streaming_csv.py  tui.py
