[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-pdf"
version = "0.1.0"
description = "Advanced Invoice Data Extractor using Google's Gemini AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai[aiohttp]>=0.3.0",
    "PyMuPDF>=1.23.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
invoice-pdf = "invoice_pdf.__main__:main"

[tool.setuptools.packages.find]
include = ["invoice_pdf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "YTT", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["COM812", "ISC001"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "FBT"]
"invoice_pdf/_legacy/*" = ["ALL"]  # Don't lint legacy code

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "invoice_pdf._legacy.*"
ignore_errors = true  # Don't type-check legacy code